--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,4 +3,4 @@ image: gitpod/workspace-python
 
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - init: pip install "cookiecutter>=1.7.0" # runs during prebuild
+  - command: pip install "cookiecutter>=1.7.0"
